rbac-best-practices/restrict-automount-sa-token/e2e/bad-resource.yaml
apiVersion: v1
kind: Pod
metadata:
  name: badpod01
spec:
  automountServiceAccountToken: true
  containers:
    - name: busybox
      image: busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    app.kubernetes.io/part-of: blah-reporter
  name: badpod02
spec:
  containers:
    - name: busybox
      image: busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod03
spec:
  containers:
    - name: busybox
      image: busybox:1.35
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: busybox
  name: baddeployment01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  strategy: {}
  template:
    metadata:
      labels:
        app: busybox
    spec:
      automountServiceAccountToken: true
      containers:
      - name: busybox
        image: busybox:1.35
---
apiVersion: batch/v1
kind: CronJob
metadata:
  labels:
    app.kubernetes.io/part-of: blah-reporter
  name: badcronjob01
spec:
  schedule: "* * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          containers:
          - name: busybox
            image: busybox:1.35
          restartPolicy: OnFailure
