rbac-best-practices/restrict-automount-sa-token/e2e/enforce-policy-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-automount-sa-token
spec:
  validationFailureAction: Enforce
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
