rbac-best-practices/restrict-automount-sa-token/e2e/policy-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-automount-sa-token
spec:
  validationFailureAction: audit
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
